--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -22,6 +22,12 @@
 .navbar{
   color: #85B0BE;
   margin: 5px;
+  padding: 5px;
+}
+
+.nav-button{
+  color: #85B0BE;
+  padding: 5px;
 }
 
 @keyframes App-logo-spin {
